# hiresense

./: .gitignore  README.md  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
app/: globals.css  layout.tsx  page.tsx
app/api/analyze-cv/: route.ts
app/api/grade-test/: route.ts
app/api/predict-success/: route.ts
app/login/: page.tsx
app/recruiter/: layout.tsx  page.tsx
app/recruiter/jobs/[jobId]/candidates/: page.tsx
app/recruiter/jobs/[jobId]/questions/: page.tsx
app/recruiter/jobs/new/: page.tsx
app/student/: layout.tsx  page.tsx
app/student/apply/[jobId]/: page.tsx
backend/: README.md  inference.py  main.py  model_config.json  model_loader.py  pyproject.toml  schemas.py  scorer.py  scoring.py
backend/models/: model_weights.pt  resume_ner_model.pt
components/shared/: animated-counter.tsx  gauge-chart.tsx  page-transition.tsx
docs/: PROJECT_UNDERSTANDING.md
hooks/: use-confetti.ts  use-timer.ts
lib/: auth-context.tsx  sample-data.ts  scoring.ts  store.ts  types.ts
scripts/training/: HireSense_Training.ipynb  HireSense_Training_FIXED.ipynb  README.md  chart1_per_entity_f1.py  chart2_loss_f1_curves.py  chart5_confusion_matrix.py  chart9_model_comparison.py  config.py  dataset.py  evaluate.py  export_model.py  model.py  requirements.txt  train.py  train_local.py  train_local_graphs.py  train_local_graphs_final.py
